fix layout on mobile + passive listener

--- a/components/BasePage/index.module.scss
+++ b/components/BasePage/index.module.scss
@@ -22,7 +22,7 @@ $background-color-secondary: #004949;
   align-items: center;
   justify-content: center;
 
-  height: 100%;
+  min-height: 100lvh;
 
   .spotlight-mask {
     position: fixed;
